--- a/app/src/main/res/layout/fragment_tareas.xml
+++ b/app/src/main/res/layout/fragment_tareas.xml
@@ -19,6 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:dividerHeight="8dp" />
+        android:dividerHeight="8dp"
+        >
+    </ListView>
 
 </LinearLayout>
