--- a/app/src/main/res/layout/item_tarea.xml
+++ b/app/src/main/res/layout/item_tarea.xml
@@ -8,16 +8,15 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvCompletadaLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/completada"
-            android:textSize="10sp"
-             />
+            android:textSize="10sp" />
 
         <CheckBox
             android:id="@+id/cbCompletada"
@@ -38,6 +37,6 @@
         android:id="@+id/btnEliminar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_delete"
-        android:contentDescription="@string/eliminar" />
+        android:contentDescription="@string/eliminar"
+        android:src="@android:drawable/ic_menu_delete" />
 </LinearLayout>
