--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,11 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_pendientes"
-        android:title="Pendientes"
-        android:icon="@android:drawable/ic_menu_agenda" />
+        android:icon="@drawable/incomplete_svgrepo_com"
+        android:title="@string/pendientes" />
     <item
         android:id="@+id/nav_completadas"
-        android:title="Completadas"
-        android:icon="@android:drawable/ic_menu_my_calendar" />
+        android:icon="@drawable/completed_checkmark_done_complete_svgrepo_com"
+        android:title="@string/completada" />
 </menu>
-
