--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="navbar_selected">#FF6200EE</color> <!-- Un morado fuerte, visible -->
+    <color name="navbar_unselected">#FF888888</color> <!-- Gris visible para íconos no seleccionados -->
+    <color name="nav_icon_selected">#FFFFFFFF</color> <!-- Blanco para icono seleccionado en modo oscuro -->
+    <color name="nav_icon_unselected">#FFB0B0B0</color> <!-- Gris claro para icono no seleccionado -->
+    <color name="nav_text_selected">#FFFFFFFF</color> <!-- Blanco para texto seleccionado -->
+    <color name="nav_text_unselected">#FFB0B0B0</color> <!-- Gris claro para texto no seleccionado -->
+    <color name="nav_bar_bg_dark">#FF222222</color> <!-- Fondo oscuro para navbar en modo nocturno -->
+    <color name="nav_bar_bg_light">#FFFFFFFF</color> <!-- Fondo claro para navbar en modo claro -->
 </resources>
