--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,10 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_pendientes"
+        android:enabled="true"
         android:icon="@drawable/incomplete_svgrepo_com"
         android:title="@string/pendientes" />
     <item
         android:id="@+id/nav_completadas"
+        android:enabled="true"
         android:icon="@drawable/completed_checkmark_done_complete_svgrepo_com"
         android:title="@string/completada" />
 </menu>
